--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "^1.0.3",
-    "@pinia/nuxt": "^0.9.0",
     "nuxt": "^3.8.2",
     "sass": "^1.83.0",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "pinia": "^2.3.0"
   }
 }
