--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@pinia/nuxt": "^0.9.0",
     "nuxt": "^3.8.2",
     "pinia": "^2.3.0",
+    "sass-embedded": "^1.83.0",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
   }
